--- a/one.html
+++ b/one.html
@@ -1,83 +1,3 @@
-<h1 align="center">Hello Sir 👋, I'm Sanket Gole</h1>
-<h3 align="center">A Passionate Frontend Developer From India</h3>
-<img
-  align="right"
-  width="400"
-  src="https://www.digisailor.com/assets/img/services-details/5.gif"
-  alt="Codding Image"
-/>
-
-<p align="left">
-  <img
-    src="https://komarev.com/ghpvc/?username=heysanket&label=Profile%20views&color=0e75b6&style=flat"
-    alt="heysanket"
-  />
-</p>
-
-<h3 align="left">Connect with me:</h3>
-<p align="left">
-  <a href="https://twitter.com/hey.samket" target="blank"
-    ><img
-      align="center"
-      src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg"
-      alt="hey.samket"
-      height="30"
-      width="40"
-  /></a>
-  <a href="https://instagram.com/hey.sanket" target="blank"
-    ><img
-      align="center"
-      src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg"
-      alt="hey.sanket"
-      height="30"
-      width="40"
-  /></a>
-</p>
-
-<h3 align="left">Languages and Tools:</h3>
-<p align="left">
-  <a href="https://getbootstrap.com" target="_blank" rel="noreferrer">
-    <img
-      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg"
-      alt="bootstrap"
-      width="40"
-      height="40"
-    />
-  </a>
-
-  <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer">
-    <img
-      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg"
-      alt="typescript"
-      width="40"
-      height="40"
-    />
-  </a>
-</p>
-
-<p>
-  &nbsp;<img
-    align="center"
-    src="https://github-readme-stats.vercel.app/api?username=heysanket&show_icons=true&locale=en"
-    alt="heysanket"
-  />
-</p>
-
-<p>
-  <img
-    align="left"
-    src="https://github-readme-stats.vercel.app/api/top-langs?username=heysanket&show_icons=true&locale=en&layout=compact"
-    alt="heysanket"
-  />
-</p>
-
-<p>
-  <img
-    align="center"
-    src="https://github-readme-streak-stats.herokuapp.com/?user=heysanket&"
-    alt="heysanket"
-  />
-</p>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -88,6 +8,6 @@
   </head>
   <body>
     <h2>Sanket Gole</h2>
-    <h2>Sanket Gole</h2>
+    <h2>master again checkout Gole</h2>
   </body>
 </html>
