--- a/one.html
+++ b/one.html
@@ -10,5 +10,7 @@
     <h2>Sanket Gole</h2>
     <h2>master again checkout Gole</h2>
     b1 to master again file upload
+    
+    eddited by git hub
   </body>
 </html>
