--- a/one.html
+++ b/one.html
@@ -9,10 +9,6 @@
   <body>
     <h2>Sanket Gole</h2>
     <h2>master again checkout Gole</h2>
-    b1 to master again file upload
-    
-    eddited by git hub
-    b1 to master again file upload b1 to master again file upload b1 to master
-    again file upload b1 to master again file upload
+    b1 to master again file upload commitrd file
   </body>
 </html>
