--- a/one.html
+++ b/one.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Sanket Gole</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,7 +33,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Files</a>
             </li>
             <li class="nav-item dropdown">
               <a
